# C-XGBoost

./: CMakeLists.txt  README.md  ThreadPool.h  Tree.cpp  Tree.h  TreeNode.h  bestFeatureSplit.h  housing_num.csv  main  main.cpp  model.cpp  model.h
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
